APS-147: Config related to show the hubspot form in solutions pages

--- a/config/clecotools/default/block.block.views_block__hubspot_forms_hubspot_title_icon.yml
+++ b/config/clecotools/default/block.block.views_block__hubspot_forms_hubspot_title_icon.yml
@@ -26,4 +26,4 @@ visibility:
   request_path:
     id: request_path
     negate: false
-    pages: "/contact\r\n/kontakt"
+    pages: "/contact\r\n/kontakt\r\n/solutions/*"
