APEX-719: Cmapbel theme deprecated libraries compatible.

--- a/docroot/themes/custom/campbell/campbell.libraries.yml
+++ b/docroot/themes/custom/campbell/campbell.libraries.yml
@@ -23,14 +23,14 @@ global:
   css:
     theme:
       css/main.css : {}
-      
+
   js:
     js/main.js: {}
 
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 slider:
   css:
@@ -52,7 +52,7 @@ node--product-category:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 product-detail:
   css:
@@ -67,7 +67,7 @@ product-detail:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
 
 brand-timeline:
   css:
@@ -80,4 +80,4 @@ brand-timeline:
   dependencies:
     - core/drupal
     - core/jquery
-    - core/jquery.once
+    - core/once
