--- a/config/apex-tools/default/core.entity_form_display.paragraph.drive_configuration_para.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.drive_configuration_para.default.yml
@@ -48,7 +48,7 @@ content:
             effect_options: {  }
             selector: ''
   field_hex_size:
-    type: options_buttons
+    type: options_select
     weight: 2
     region: content
     settings: {  }
