--- a/config/apex-tools/default/core.entity_view_display.paragraph.quotation_order_type.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.paragraph.quotation_order_type.default.yml
@@ -4,11 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.quotation_order_type.field_add_spec
+    - field.field.paragraph.quotation_order_type.field_applied_or_driving_torque
     - field.field.paragraph.quotation_order_type.field_order_type
     - field.field.paragraph.quotation_order_type.field_quantity
     - field.field.paragraph.quotation_order_type.field_tool_industry
     - paragraphs.paragraphs_type.quotation_order_type
   module:
+    - double_field
     - options
 id: paragraph.quotation_order_type.default
 targetEntityType: paragraph
@@ -21,6 +23,30 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 3
+    region: content
+  field_applied_or_driving_torque:
+    type: double_field_unformatted_list
+    label: above
+    settings:
+      first:
+        format_type: medium
+        link: false
+        hidden: false
+        key: false
+        decimal_separator: .
+        thousand_separator: ''
+        scale: 2
+      second:
+        format_type: medium
+        link: false
+        hidden: false
+        key: false
+        decimal_separator: .
+        thousand_separator: ''
+        scale: 2
+      inline: true
+    third_party_settings: {  }
+    weight: 4
     region: content
   field_order_type:
     type: list_default
