--- a/config/apex-tools/default/core.extension.yml
+++ b/config/apex-tools/default/core.extension.yml
@@ -58,6 +58,7 @@ module:
   entity_browser: 0
   entity_browser_entity_form: 0
   entity_print: 0
+  entity_print_views: 0
   entity_reference_revisions: 0
   entity_usage: 0
   feeds: 0
