--- a/config/apex-tools/local/core.extension.yml
+++ b/config/apex-tools/local/core.extension.yml
@@ -50,6 +50,8 @@ module:
   datetime: 0
   dblog: 0
   default_paragraphs: 0
+  devel: 0
+  devel_entity_updates: 0
   double_field: 0
   drupalmoduleupgrader: 0
   dynamic_entity_reference: 0
@@ -61,6 +63,7 @@ module:
   entity_browser: 0
   entity_browser_entity_form: 0
   entity_print: 0
+  entity_print_views: 0
   entity_reference_revisions: 0
   entity_usage: 0
   feeds: 0
