--- a/config/apex-tools/default/core.entity_form_display.paragraph.quotation_screwdriver.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.quotation_screwdriver.default.yml
@@ -27,43 +27,43 @@ content:
         screwdriver_part_type:
           value: '1'
           edit_mode: edit
-          weight: '-10'
+          weight: '0'
         quotation_screwdriver_style:
           value: '1'
           edit_mode: edit
-          weight: '-9'
+          weight: '0'
         quotation_screwdriver_drive_type:
           value: '1'
           edit_mode: edit
-          weight: '-8'
+          weight: '0'
         bit_dimensions:
           value: '1'
           edit_mode: edit
-          weight: '-7'
+          weight: '0'
         bit_holder_retention_method:
           value: '1'
           edit_mode: edit
-          weight: '-6'
+          weight: '0'
         screwdriver_bit_holder_styles:
           value: '1'
           edit_mode: edit
-          weight: '-5'
-        screwdriver_cover_requirements:
-          value: '1'
-          edit_mode: edit
-          weight: '-4'
-        screwdriver_cover_features:
-          value: '1'
-          edit_mode: edit
-          weight: '-3'
+          weight: '0'
         socket_dimensions:
           value: '1'
           edit_mode: edit
-          weight: '-2'
+          weight: '0'
+        screwdriver_cover_requirements:
+          value: '1'
+          edit_mode: edit
+          weight: '0'
+        screwdriver_cover_features:
+          edit_mode: edit
+          weight: '0'
+          value: 0
         quotation_order_type:
           value: '1'
           edit_mode: edit
-          weight: '-1'
+          weight: '0'
       edit_mode: closed
     third_party_settings: {  }
 hidden:
