The first commit's message is:
APEX-654:Permissions of csqw

APEX-654:CSQW Permission

--- a/config/apex-tools/default/user.role.anonymous.yml
+++ b/config/apex-tools/default/user.role.anonymous.yml
@@ -16,6 +16,7 @@ dependencies:
     - apex_tools_custom_quotation
     - comment
     - contact
+    - entity_print_views
     - media
     - paragraphs_type_permissions
     - search
@@ -84,6 +85,7 @@ permissions:
   - 'delete paragraph content media_file'
   - 'delete paragraph content socket_extension_adapter'
   - 'delete paragraph content universal_swivel_wrench_para'
+  - 'entity print views access'
   - 'search content'
   - 'select terms in continent'
   - 'select terms in department'
@@ -112,6 +114,7 @@ permissions:
   - 'update paragraph content image_uploads'
   - 'update paragraph content magnetic'
   - 'update paragraph content male_hex_drive_standard_type'
+  - 'update paragraph content media_file'
   - 'update paragraph content mortorq'
   - 'update paragraph content optional_features'
   - 'update paragraph content other'
