APEX-000: CSQW form update.

--- a/config/apex-tools/default/core.entity_form_display.quotation.quotation.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.quotation.quotation.default.yml
@@ -56,7 +56,7 @@ third_party_settings:
         step_description: ''
         back_button_show: false
         back_button_text: Back
-        next_button_text: 'NEXT STEP >>'
+        next_button_text: 'NEXT STEP'
         step_help: ''
     group_request_for_reactivation:
       children:
@@ -80,7 +80,7 @@ third_party_settings:
         step_description: ''
         back_button_show: false
         back_button_text: Back
-        next_button_text: 'CONTINUE TO CUSTOM QUOTE REQUEST »'
+        next_button_text: 'CONTINUE TO CUSTOM QUOTE REQUEST'
         required_fields: true
         step_help: ''
     group_custom_drive_tool:
@@ -100,13 +100,13 @@ third_party_settings:
         step_description: ''
         back_button_show: false
         back_button_text: Back
-        next_button_text: 'CONTINUE TO IMAGE UPLOADS »'
+        next_button_text: 'CONTINUE TO IMAGE UPLOADS'
         required_fields: true
         step_help: ''
     group_4:
       children:
         - field_image_uploads_4
-      label: '4. Image Uploads'
+      label: '<span>4. Image Uploads</span>'
       region: content
       parent_name: ''
       weight: 3
