APEX-656: Added salseforce integration

--- a/config/apex-tools/default/core.entity_form_display.quotation.quotation.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.quotation.quotation.default.yml
@@ -119,8 +119,8 @@ third_party_settings:
         step_description: ''
         back_button_show: false
         back_button_text: Back
-        next_button_text: Next
         required_fields: true
+        next_button_text: 'Submit Request for Quote >>'
         step_help: ''
 id: quotation.quotation.default
 targetEntityType: quotation
