--- a/composer.json
+++ b/composer.json
@@ -49,20 +49,20 @@
         "drupal/acquia_search": "^3.0.9",
         "drupal/address": "^1.11",
         "drupal/admin_toolbar": "^3.2.1",
-        "drupal/advagg": "^4.0",
-        "drupal/allowed_formats": "^1.4",
+        "drupal/advagg": "^6.0@alpha",
+        "drupal/allowed_formats": "^2.0",
         "drupal/better_exposed_filters": "^6.0",
         "drupal/bg_image_formatter": "^1.16",
         "drupal/blazy": "^2.2",
         "drupal/block_class": "^2.0",
         "drupal/block_field": "^1.0@alpha",
         "drupal/classy_paragraphs": "^1.0@RC",
-        "drupal/color_field": "^2.4",
+        "drupal/color_field": "^3.0",
         "drupal/conditional_fields": "^4.0@alpha",
         "drupal/config_export_ignore": "^1.1",
         "drupal/config_ignore": "^3.0@beta",
         "drupal/config_split": "^1.0",
-        "drupal/config_update": "1.7",
+        "drupal/config_update": "^2.0@alpha",
         "drupal/contact_storage": "^1.3",
         "drupal/content_sync": "^3.0@beta",
         "drupal/cookiebot": "^1.0@alpha",
@@ -71,7 +71,7 @@
         "drupal/core-project-message": "9.5.10",
         "drupal/core-recommended": "9.5.10",
         "drupal/core-vendor-hardening": "^9.4.7",
-        "drupal/current_page_crumb": "^1.2",
+        "drupal/current_page_crumb": "^1.4",
         "drupal/default_paragraphs": "^2.0@RC",
         "drupal/devel": "^5.1",
         "drupal/devel_entity_updates": "^3.0",
@@ -87,10 +87,11 @@
         "drupal/email_registration": "^1.0@RC",
         "drupal/entity": "^1.4",
         "drupal/entity_browser": "^2.9",
-        "drupal/entity_clone": "^1.0@beta",
+        "drupal/entity_clone": "^2.0@beta",
         "drupal/entity_print": "2.x",
         "drupal/entity_reference_revisions": "^1.9",
         "drupal/entity_usage": "^2.0@beta",
+        "drupal/entityreference_filter": "^2.0@beta",
         "drupal/environment_indicator": "^4.0",
         "drupal/external_hreflang": "^2.0",
         "drupal/extlink": "^1.6",
@@ -98,9 +99,9 @@
         "drupal/feeds": "^3.0@beta",
         "drupal/feeds_tamper": "^2.0@beta",
         "drupal/field_group": "^3.4",
-        "drupal/field_group_settings": "^3.0",
+        "drupal/field_group_settings": "^4.0",
         "drupal/field_label": "^1.0",
-        "drupal/field_states_ui": "^2.0",
+        "drupal/field_states_ui": "^3.0",
         "drupal/file_mdm": "^2.5",
         "drupal/fixed_block_content": "^1.2",
         "drupal/focal_point": "^2.0",
@@ -112,16 +113,16 @@
         "drupal/image_effects": "^3.4",
         "drupal/imageapi_optimize": "^4.0@beta",
         "drupal/imageapi_optimize_resmushit": "^2.0@beta",
-        "drupal/imageapi_optimize_webp": "^2.0@beta",
+        "drupal/imageapi_optimize_webp": "^2.0",
         "drupal/imagemagick": "^3.4",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/jquery_ui": "^1.4",
         "drupal/jquery_ui_sortable": "^1.1",
         "drupal/jsonapi_extras": "^3.23",
-        "drupal/layout_paragraphs": "^1.0@beta",
+        "drupal/layout_paragraphs": "^2.0",
         "drupal/limited_field_widgets": "^2.1@alpha",
-        "drupal/link_class": "^1.0",
-        "drupal/linkit": "^5.0@beta",
+        "drupal/link_class": "^2.1",
+        "drupal/linkit": "^6.0@RC",
         "drupal/login_emailusername": "^2.1",
         "drupal/markup": "^2.0@beta",
         "drupal/media_entity_browser": "^2.0@alpha",
@@ -129,25 +130,25 @@
         "drupal/media_video_micromodal": "^1.0.8",
         "drupal/memcache": "^2.0@alpha",
         "drupal/menu_link_attributes": "^1.0",
-        "drupal/menu_trail_by_path": "^1.0",
+        "drupal/menu_trail_by_path": "^2.0",
         "drupal/metatag": "^1.22",
         "drupal/metatag_async_widget": "^1.0@alpha",
-        "drupal/migrate_plus": "^5.1",
-        "drupal/migrate_tools": "^5.0",
-        "drupal/module_filter": "^3.2",
+        "drupal/migrate_plus": "^6.0",
+        "drupal/migrate_tools": "^6.0",
+        "drupal/module_filter": "^4.0",
         "drupal/modules_weight": "^1.9",
-        "drupal/node_view_permissions": "^1.5",
+        "drupal/node_view_permissions": "^1.6",
         "drupal/paragraphs": "^1.x-dev",
         "drupal/paragraphs_ee": "1.x-dev@dev",
         "drupal/password_policy": "^4.0",
         "drupal/path_redirect_import": "1.x-dev",
         "drupal/pathauto": "^1.11",
-        "drupal/pdfpreview": "^1.0",
+        "drupal/pdfpreview": "^1.1",
         "drupal/permissions_filter": "^1.3",
         "drupal/physical": "^1.3",
         "drupal/purge": "^3.4",
-        "drupal/purge_purger_http": "^1.0",
-        "drupal/quick_node_clone": "^1.14",
+        "drupal/purge_purger_http": "^1.1",
+        "drupal/quick_node_clone": "^1.16",
         "drupal/rabbit_hole": "^1.0@beta",
         "drupal/recaptcha": "^3.0",
         "drupal/redirect": "^1.8",
@@ -161,12 +162,12 @@
         "drupal/sfweb2lead_webform": "^5.2",
         "drupal/shield": "^1.6",
         "drupal/simple_multistep": "^2.0",
-        "drupal/simple_sitemap": "^3.3",
+        "drupal/simple_sitemap": "^4.1",
         "drupal/sitemap": "^2.0@beta",
         "drupal/smart_trim": "^2.0.0",
-        "drupal/stage_file_proxy": "^1.0",
+        "drupal/stage_file_proxy": "^2.0",
         "drupal/structure_sync": "^2.0",
-        "drupal/svg_image": "^1.8",
+        "drupal/svg_image": "^3.0",
         "drupal/swiftmailer": "2.x-dev",
         "drupal/tamper": "^1.0@alpha",
         "drupal/taxonomy_access_fix": "^4.0@beta",
@@ -182,11 +183,11 @@
         "drupal/views_data_export": "^1.2",
         "drupal/views_taxonomy_term_name_into_id": "^1.0@RC",
         "drupal/views_tree": "^2.0@RC",
-        "drupal/viewsreference": "^2.0@alpha",
+        "drupal/viewsreference": "^2.0@beta",
         "drupal/viewsreference_filter": "^1.0.3",
         "drupal/we_megamenu": "^1.13",
-        "drupal/webform": "^6.0",
-        "drupal/webform_mailchimp": "^5.9",
+        "drupal/webform": "^6.2@beta",
+        "drupal/webform_mailchimp": "^5.10",
         "drush/drush": "10.6.2",
         "furf/jquery-ui-touch-punch": "^1.0",
         "geocoder-php/google-maps-provider": "^4.7",
@@ -333,20 +334,6 @@
             },
             "drupal/field_group_settings": {
                 "https://www.drupal.org/project/field_group_settings/issues/3302961": "https://www.drupal.org/files/issues/2022-08-10/3302961_1_button-fix.diff"
-            },
-            "drupal/field_states_ui": {
-                "https://www.drupal.org/node/3166929": "https://www.drupal.org/files/issues/2020-08-24/3166929-0.patch",
-                "https://www.drupal.org/node/3212229": "https://www.drupal.org/files/issues/2021-05-04/3212229-04.patch"
-            },
-            "drupal/layout_paragraphs": {
-                "https://www.drupal.org/node/3158244": "https://www.drupal.org/files/issues/2021-05-07/configurable_modal_width_3158244-7.patch",
-                "https://www.drupal.org/node/3199508": "https://www.drupal.org/files/issues/2021-03-11/3199508-2.patch"
-            },
-            "drupal/linkit": {
-                "https://www.drupal.org/node/2712951": "https://www.drupal.org/files/issues/2020-11-02/linkit-for-link-field-2712951-194.patch"
-            },
-            "drupal/migrate_plus": {
-                "https://www.drupal.org/project/migrate_plus/issues/2787157": "https://www.drupal.org/files/issues/2020-10-06/fix_xpath_error-2787157-17.patch"
             },
             "drupal/simple_gmap": {
                 "https://www.drupal.org/node/2863979": "https://www.drupal.org/files/issues/2018-11-21/simple_gmap-address-formatter-2863979-36.patch"
