APEX-654: Config changes

--- a/config/apex-tools/default/core.entity_form_display.paragraph.pozidriv_r.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.pozidriv_r.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.pozidriv_r.field_pozidriv_point_size
-    - field.field.paragraph.pozidriv_r.field_pozidriv_r
+    - field.field.paragraph.pozidriv_r.field_torx
     - paragraphs.paragraphs_type.pozidriv_r
 id: paragraph.pozidriv_r.default
 targetEntityType: paragraph
@@ -17,7 +17,7 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_pozidriv_r:
+  field_torx:
     type: options_buttons
     weight: 0
     region: content
