--- a/config/apex-tools/default/core.entity_form_display.paragraph.square_recess.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.square_recess.default.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.square_recess.field_recess_point_size
-    - field.field.paragraph.square_recess.field_square_recess
+    - field.field.paragraph.square_recess.field_torx
     - paragraphs.paragraphs_type.square_recess
 id: paragraph.square_recess.default
 targetEntityType: paragraph
@@ -17,7 +17,7 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_square_recess:
+  field_torx:
     type: options_buttons
     weight: 0
     region: content
