--- a/config/apex-tools/default/core.entity_form_display.paragraph.torx_plus_r.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.torx_plus_r.default.yml
@@ -3,23 +3,23 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.torx_plus_r.field_torx
     - field.field.paragraph.torx_plus_r.field_torx_plus_point_size
-    - field.field.paragraph.torx_plus_r.field_torx_plus_r
     - paragraphs.paragraphs_type.torx_plus_r
 id: paragraph.torx_plus_r.default
 targetEntityType: paragraph
 bundle: torx_plus_r
 mode: default
 content:
-  field_torx_plus_point_size:
-    type: options_select
-    weight: 1
+  field_torx:
+    type: options_buttons
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_torx_plus_r:
-    type: options_buttons
-    weight: 0
+  field_torx_plus_point_size:
+    type: options_select
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
