--- a/config/apex-tools/default/core.entity_form_display.paragraph.torx_r.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.torx_r.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.torx_r.field_torx_r
+    - field.field.paragraph.torx_r.field_torx
     - field.field.paragraph.torx_r.field_torx_r_
     - paragraphs.paragraphs_type.torx_r
 id: paragraph.torx_r.default
@@ -11,7 +11,7 @@ targetEntityType: paragraph
 bundle: torx_r
 mode: default
 content:
-  field_torx_r:
+  field_torx:
     type: options_buttons
     weight: 0
     region: content
