--- a/config/clecotools/default/field.field.node.home.field_callout_section_footer.yml
+++ b/config/clecotools/default/field.field.node.home.field_callout_section_footer.yml
@@ -14,7 +14,7 @@ entity_type: node
 bundle: home
 label: 'Callout Section Footer'
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
