--- a/config/clecotools/default/core.entity_form_display.node.case_studies.default.yml
+++ b/config/clecotools/default/core.entity_form_display.node.case_studies.default.yml
@@ -152,5 +152,4 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden:
-  field_type_of_case_study: true
+hidden: {  }
