APEX-654: Paragraph changes

--- a/config/apex-tools/default/core.entity_form_display.paragraph.screwdriver_cover_features.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.screwdriver_cover_features.default.yml
@@ -168,7 +168,7 @@ content:
         label_display: block
         size: 30
         placeholder: ''
-        label: 'Other considerations (must specifu)'
+        label: 'Other considerations (must specify)'
         cols: 10
         rows: 5
       second:
