--- a/config/apex-tools/default/core.entity_form_display.paragraph.other.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.other.default.yml
@@ -12,7 +12,7 @@ bundle: other
 mode: default
 content:
   field_other:
-    type: options_select
+    type: options_buttons
     weight: 0
     region: content
     settings: {  }
