APEX-656: Added some fields and changed last submit button

--- a/config/apex-tools/default/core.entity_form_display.paragraph.socket_dimensions.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.socket_dimensions.default.yml
@@ -9,14 +9,18 @@ dependencies:
     - field.field.paragraph.socket_dimensions.field_d_taper_or_shoulder_length
     - field.field.paragraph.socket_dimensions.field_e_bolt_clearance_depth
     - field.field.paragraph.socket_dimensions.field_f_broach_depth
+    - field.field.paragraph.socket_dimensions.field_full_compressed
     - field.field.paragraph.socket_dimensions.field_g_nose_end_diameter
     - field.field.paragraph.socket_dimensions.field_h_broach_opening
     - field.field.paragraph.socket_dimensions.field_i_torx_r_size
     - field.field.paragraph.socket_dimensions.field_j_mag_depth
-    - field.field.paragraph.socket_dimensions.field_k_spring_force
+    - field.field.paragraph.socket_dimensions.field_k_spring_force_rate_
     - field.field.paragraph.socket_dimensions.field_l_barbell_style_dims
+    - field.field.paragraph.socket_dimensions.field_rate_lbf_in_
+    - field.field.paragraph.socket_dimensions.field_rest
     - paragraphs.paragraphs_type.socket_dimensions
   module:
+    - conditional_fields
     - physical
 id: paragraph.socket_dimensions.default
 targetEntityType: paragraph
@@ -28,7 +32,7 @@ content:
     weight: 0
     region: content
     settings:
-      default_unit: m
+      default_unit: mm
       allow_unit_change: true
       available_units:
         mm: mm
@@ -44,7 +48,7 @@ content:
     weight: 1
     region: content
     settings:
-      default_unit: m
+      default_unit: mm
       allow_unit_change: true
       available_units:
         mm: mm
@@ -60,7 +64,7 @@ content:
     weight: 2
     region: content
     settings:
-      default_unit: m
+      default_unit: mm
       allow_unit_change: true
       available_units:
         mm: mm
@@ -76,7 +80,7 @@ content:
     weight: 3
     region: content
     settings:
-      default_unit: m
+      default_unit: mm
       allow_unit_change: true
       available_units:
         mm: mm
@@ -92,7 +96,7 @@ content:
     weight: 4
     region: content
     settings:
-      default_unit: m
+      default_unit: mm
       allow_unit_change: true
       available_units:
         mm: mm
@@ -108,7 +112,7 @@ content:
     weight: 5
     region: content
     settings:
-      default_unit: m
+      default_unit: mm
       allow_unit_change: true
       available_units:
         mm: mm
@@ -119,12 +123,39 @@ content:
         ft: '0'
         M: '0'
     third_party_settings: {  }
+  field_full_compressed:
+    type: string_textfield
+    weight: 12
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings:
+      conditional_fields:
+        e7aa3913-125a-42ac-8c47-eaab0771508d:
+          entity_type: paragraph
+          bundle: socket_dimensions
+          dependee: field_k_spring_force_rate_
+          settings:
+            state: visible
+            reset: false
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: spring_force
+            effect: show
+            effect_options: {  }
+            selector: ''
   field_g_nose_end_diameter:
     type: physical_measurement_default
     weight: 6
     region: content
     settings:
-      default_unit: m
+      default_unit: mm
       allow_unit_change: true
       available_units:
         mm: mm
@@ -152,7 +183,7 @@ content:
     weight: 9
     region: content
     settings:
-      default_unit: m
+      default_unit: mm
       allow_unit_change: true
       available_units:
         mm: mm
@@ -163,28 +194,18 @@ content:
         ft: '0'
         M: '0'
     third_party_settings: {  }
-  field_k_spring_force:
-    type: physical_measurement_default
+  field_k_spring_force_rate_:
+    type: options_select
     weight: 10
     region: content
-    settings:
-      default_unit: m
-      allow_unit_change: true
-      available_units:
-        mm: mm
-        in: in
-        cm: '0'
-        m: '0'
-        km: '0'
-        ft: '0'
-        M: '0'
+    settings: {  }
     third_party_settings: {  }
   field_l_barbell_style_dims:
     type: physical_measurement_default
-    weight: 11
+    weight: 14
     region: content
     settings:
-      default_unit: m
+      default_unit: mm
       allow_unit_change: true
       available_units:
         mm: mm
@@ -195,6 +216,60 @@ content:
         ft: '0'
         M: '0'
     third_party_settings: {  }
+  field_rate_lbf_in_:
+    type: string_textfield
+    weight: 13
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings:
+      conditional_fields:
+        48f66867-842f-4baf-8c0c-6825a7ed25d2:
+          entity_type: paragraph
+          bundle: socket_dimensions
+          dependee: field_k_spring_force_rate_
+          settings:
+            state: visible
+            reset: false
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: spring_rate
+            effect: show
+            effect_options: {  }
+            selector: ''
+  field_rest:
+    type: string_textfield
+    weight: 11
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings:
+      conditional_fields:
+        124dcf9b-45bd-4d39-99cd-ed70f0f3e82b:
+          entity_type: paragraph
+          bundle: socket_dimensions
+          dependee: field_k_spring_force_rate_
+          settings:
+            state: visible
+            reset: false
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: spring_force
+            effect: show
+            effect_options: {  }
+            selector: ''
 hidden:
   created: true
   status: true
