--- a/config/apex-tools/default/field.field.paragraph.socket_dimensions.field_i_torx_r_size.yml
+++ b/config/apex-tools/default/field.field.paragraph.socket_dimensions.field_i_torx_r_size.yml
@@ -12,7 +12,7 @@ field_name: field_i_torx_r_size
 entity_type: paragraph
 bundle: socket_dimensions
 label: 'I. Torx® Size'
-description: ''
+description: '<img src=''/sites/apex-tools/files/paragraphs_type_icon/SrfcDrv_Sckt_Profile.png''>'
 required: false
 translatable: false
 default_value: {  }
