--- a/config/apex-tools/default/field.field.paragraph.socket_dimensions.field_k_spring_force_rate_.yml
+++ b/config/apex-tools/default/field.field.paragraph.socket_dimensions.field_k_spring_force_rate_.yml
@@ -1,19 +1,19 @@
-uuid: 0b65315e-a40c-4cc1-8b69-edfe6f7f14ca
+uuid: ba45dba7-87b7-48e6-be4a-e255ba6f2487
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_h_broach_opening
+    - field.storage.paragraph.field_k_spring_force_rate_
     - paragraphs.paragraphs_type.socket_dimensions
   module:
     - options
-id: paragraph.socket_dimensions.field_h_broach_opening
-field_name: field_h_broach_opening
+id: paragraph.socket_dimensions.field_k_spring_force_rate_
+field_name: field_k_spring_force_rate_
 entity_type: paragraph
 bundle: socket_dimensions
-label: 'H. Broach Opening'
+label: 'K. Spring(Force/Rate)'
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
