--- a/config/apex-tools/default/field.storage.paragraph.field_broach_opening_allowed.yml
+++ b/config/apex-tools/default/field.storage.paragraph.field_broach_opening_allowed.yml
@@ -13,34 +13,34 @@ settings:
   allowed_values:
     -
       value: hex
-      label: 'Hex<img src=''/sites/apex-tools/files/paragraphs_type_icon/socket_one.png''>'
+      label: 'Hex<img src=''/sites/apex-tools/files/paragraphs_type_icon/Hex_Sckt_Profile.png''>'
     -
       value: double_hex
-      label: 'Double Hex<img src=''/sites/apex-tools/files/paragraphs_type_icon/socket_two.png''>'
+      label: 'Double Hex<img src=''/sites/apex-tools/files/paragraphs_type_icon/DblHex _Sckt_Profile.png''>'
     -
       value: square
-      label: 'Square<img src=''/sites/apex-tools/files/paragraphs_type_icon/socket_three.png''>'
+      label: 'Square<img src=''/sites/apex-tools/files/paragraphs_type_icon/SQUARE_Profiles.png''>'
     -
       value: double_square
-      label: 'Double Square<img src=''/sites/apex-tools/files/paragraphs_type_icon/socket_four.png''>'
+      label: 'Double Square<img src=''/sites/apex-tools/files/paragraphs_type_icon/DblSqr_Sckt_Profile.png''>'
     -
       value: fast_lead
-      label: 'Fast Lead<img src=''/sites/apex-tools/files/paragraphs_type_icon/socket_five.png''>'
+      label: 'Fast Lead<img src=''/sites/apex-tools/files/paragraphs_type_icon/Fast_Ld_Sckt_Profile.png''>'
     -
       value: surface_drive
-      label: 'Surface Drive<img src=''/sites/apex-tools/files/paragraphs_type_icon/socket_six.png''>'
+      label: 'Surface Drive<img src=''/sites/apex-tools/files/paragraphs_type_icon/SrfcDrv_Sckt_Profile.png''>'
     -
       value: torx®
-      label: 'Torx®<img src=''/sites/apex-tools/files/paragraphs_type_icon/socket_seven.png''>'
+      label: 'Torx®<img src=''/sites/apex-tools/files/paragraphs_type_icon/SrfcDrv_Sckt_Profile.png''>'
     -
       value: combination
-      label: 'Combination®<img src=''/sites/apex-tools/files/paragraphs_type_icon/socket_eight.png''>'
+      label: 'Combination®<img src=''/sites/apex-tools/files/paragraphs_type_icon/SrfcDrv_Sckt_Profile.png''>'
     -
       value: collapsible
-      label: 'Collapsible<img src=''/sites/apex-tools/files/paragraphs_type_icon/socket_nine.png''>'
+      label: 'Collapsible<img src=''/sites/apex-tools/files/paragraphs_type_icon/SrfcDrv_Sckt_Profile.png''>'
     -
       value: 12_point
-      label: '12 Point<img src=''/sites/apex-tools/files/paragraphs_type_icon/socket_ten.png''>'
+      label: '12 Point<img src=''/sites/apex-tools/files/paragraphs_type_icon/SrfcDrv_Sckt_Profile.png''>'
     -
       value: broach_other
       label: Other
