--- a/config/apex-tools/default/field.field.paragraph.broach_opening.field_broach_opening_allowed.yml
+++ b/config/apex-tools/default/field.field.paragraph.broach_opening.field_broach_opening_allowed.yml
@@ -13,7 +13,7 @@ entity_type: paragraph
 bundle: broach_opening
 label: 'Broach Opening'
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
