--- a/config/apex-tools/default/field.field.paragraph.socket_dimensions.field_a_square_drive.yml
+++ b/config/apex-tools/default/field.field.paragraph.socket_dimensions.field_a_square_drive.yml
@@ -13,7 +13,7 @@ entity_type: paragraph
 bundle: socket_dimensions
 label: 'A. Square Drive '
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
