--- a/config/apex-tools/default/field.field.paragraph.socket_dimensions.field_c_overall_length.yml
+++ b/config/apex-tools/default/field.field.paragraph.socket_dimensions.field_c_overall_length.yml
@@ -13,7 +13,7 @@ entity_type: paragraph
 bundle: socket_dimensions
 label: 'C. Overall Length'
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
