--- a/config/apex-tools/default/core.entity_form_display.quotation.quotation.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.quotation.quotation.default.yml
@@ -6,7 +6,6 @@ dependencies:
     - field.field.quotation.quotation.field_are_you_requesting_an_item
     - field.field.quotation.quotation.field_comments
     - field.field.quotation.quotation.field_country
-    - field.field.quotation.quotation.field_custom_drive_tool_type
     - field.field.quotation.quotation.field_custom_quotation_worksheet
     - field.field.quotation.quotation.field_describe_changes
     - field.field.quotation.quotation.field_enter_existing_apex_part
@@ -78,14 +77,12 @@ third_party_settings:
         id: ''
         show_step_title: true
         step_description: ''
-        back_button_show: false
+        back_button_show: true
         back_button_text: Back
         next_button_text: 'CONTINUE TO CUSTOM QUOTE REQUEST'
-        required_fields: true
         step_help: ''
     group_custom_drive_tool:
       children:
-        - field_custom_drive_tool_type
         - field_custom_quotation_worksheet
       label: '<span>3. Custom Drive Tool</span>'
       region: content
@@ -98,10 +95,9 @@ third_party_settings:
         id: ''
         show_step_title: true
         step_description: ''
-        back_button_show: false
+        back_button_show: true
         back_button_text: Back
         next_button_text: 'CONTINUE TO IMAGE UPLOADS'
-        required_fields: true
         step_help: ''
     group_4:
       children:
@@ -117,7 +113,7 @@ third_party_settings:
         id: ''
         show_step_title: true
         step_description: ''
-        back_button_show: false
+        back_button_show: true
         back_button_text: Back
         next_button_text: 'Submit Request for Quote >>'
         required_fields: true
@@ -229,12 +225,6 @@ content:
   field_country:
     type: address_country_default
     weight: 8
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_custom_drive_tool_type:
-    type: options_select
-    weight: 19
     region: content
     settings: {  }
     third_party_settings: {  }
