APEX-000: CSQW form update.

--- a/config/apex-tools/default/apex_tools_custom_quotation.csqw_settings.yml
+++ b/config/apex-tools/default/apex_tools_custom_quotation.csqw_settings.yml
@@ -3,3 +3,5 @@ salesforce_oid: 00Di0000000HSlj
 salesforce_return_url: 'https://www.clecotools.com/'
 salesforce_debugEmail: sforg@cloudblazer.us
 salesforce_url: 'https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8'
+lead_mail_us: 'apex-csratgpowertools@apextoolgroup.com,SpecialQuote@apextoolgroup.com'
+lead_mail_uk_de: 'contact@clecotools.com,SpecialQuote@apextoolgroup.com'
