APEX-0000: config ignore.

--- a/config/apex-tools/default/config_ignore.settings.yml
+++ b/config/apex-tools/default/config_ignore.settings.yml
@@ -5,3 +5,4 @@ ignored_config_entities:
   - language.negotiation
   - apex_migrations.settings
   - atg_callout.settings
+  - apex_tools_custom_quotation.csqw_settings
