--- a/config/apex-tools/default/core.entity_form_display.paragraph.other.default.yml
+++ b/config/apex-tools/default/core.entity_form_display.paragraph.other.default.yml
@@ -3,20 +3,14 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.other.field_other
     - field.field.paragraph.other.field_specify
+    - field.field.paragraph.other.field_torx
     - paragraphs.paragraphs_type.other
 id: paragraph.other.default
 targetEntityType: paragraph
 bundle: other
 mode: default
 content:
-  field_other:
-    type: options_buttons
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_specify:
     type: string_textfield
     weight: 1
@@ -24,6 +18,12 @@ content:
     settings:
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  field_torx:
+    type: options_buttons
+    weight: 2
+    region: content
+    settings: {  }
     third_party_settings: {  }
 hidden:
   created: true
