--- a/composer.json
+++ b/composer.json
@@ -47,21 +47,21 @@
         "drupal/acquia_connector": "^4.0",
         "drupal/acquia_purge": "^1.3",
         "drupal/acquia_search": "^3.0.9",
-        "drupal/address": "^1.11",
-        "drupal/admin_toolbar": "^3.2.1",
+        "drupal/address": "^2.0@beta",
+        "drupal/admin_toolbar": "^3.4",
         "drupal/advagg": "^6.0@alpha",
         "drupal/allowed_formats": "^2.0",
         "drupal/better_exposed_filters": "^6.0",
         "drupal/bg_image_formatter": "^1.16",
-        "drupal/blazy": "^2.2",
+        "drupal/blazy": "^2.14",
         "drupal/block_class": "^2.0",
-        "drupal/block_field": "^1.0@alpha",
-        "drupal/classy_paragraphs": "^1.0@RC",
+        "drupal/block_field": "^1.0@RC",
+        "drupal/classy_paragraphs": "^1.0@dev",
         "drupal/color_field": "^3.0",
         "drupal/conditional_fields": "^4.0@alpha",
         "drupal/config_export_ignore": "^1.1",
-        "drupal/config_ignore": "^3.0@beta",
-        "drupal/config_split": "^1.0",
+        "drupal/config_ignore": "^2.4",
+        "drupal/config_split": "^1.9",
         "drupal/config_update": "^2.0@alpha",
         "drupal/contact_storage": "^1.3",
         "drupal/content_sync": "^3.0@beta",
@@ -71,47 +71,46 @@
         "drupal/core-project-message": "9.5.10",
         "drupal/core-recommended": "9.5.10",
         "drupal/core-vendor-hardening": "^9.4.7",
+        "drupal/csv_serialization": "^3.0",
         "drupal/current_page_crumb": "^1.4",
         "drupal/default_paragraphs": "^2.0@RC",
         "drupal/devel": "^5.1",
-        "drupal/devel_entity_updates": "^3.0",
-        "drupal/devel_php": "^1.0",
-        "drupal/diff": "^1.0@RC",
+        "drupal/devel_php": "^1.5",
+        "drupal/diff": "^1.1",
         "drupal/double_field": "^4.1",
-        "drupal/drupalmoduleupgrader": "^1.9",
         "drupal/dynamic_entity_reference": "^4.0@alpha",
         "drupal/easy_breadcrumb": "^2.0",
         "drupal/edit_uuid": "^2.1",
-        "drupal/editor_file": "^1.0",
+        "drupal/editor_file": "^1.7",
         "drupal/elasticsearch_connector": "^7.0@alpha",
-        "drupal/email_registration": "^1.0@RC",
+        "drupal/email_registration": "^1.2",
         "drupal/entity": "^1.4",
         "drupal/entity_browser": "^2.9",
         "drupal/entity_clone": "^2.0@beta",
         "drupal/entity_print": "2.x",
-        "drupal/entity_reference_revisions": "^1.9",
+        "drupal/entity_reference_revisions": "^1.10",
         "drupal/entity_usage": "^2.0@beta",
         "drupal/entityreference_filter": "^2.0@beta",
         "drupal/environment_indicator": "^4.0",
         "drupal/external_hreflang": "^2.0",
-        "drupal/extlink": "^1.6",
+        "drupal/extlink": "^1.7",
         "drupal/facets": "^2.0",
         "drupal/feeds": "^3.0@beta",
         "drupal/feeds_tamper": "^2.0@beta",
         "drupal/field_group": "^3.4",
         "drupal/field_group_settings": "^4.0",
-        "drupal/field_label": "^1.0",
+        "drupal/field_label": "^1.2",
         "drupal/field_states_ui": "^3.0",
         "drupal/file_mdm": "^2.5",
         "drupal/fixed_block_content": "^1.2",
-        "drupal/focal_point": "^2.0",
+        "drupal/focal_point": "^2.0@alpha",
         "drupal/geocoder": "^3.31",
         "drupal/geofield": "^1.52",
         "drupal/geolocation": "^3.12",
-        "drupal/google_tag": "^1.3",
+        "drupal/google_tag": "^1.6",
         "drupal/hubspot": "^3.0@alpha",
         "drupal/image_effects": "^3.4",
-        "drupal/imageapi_optimize": "^4.0@beta",
+        "drupal/imageapi_optimize": "^4.0",
         "drupal/imageapi_optimize_resmushit": "^2.0@beta",
         "drupal/imageapi_optimize_webp": "^2.0",
         "drupal/imagemagick": "^3.4",
@@ -120,28 +119,27 @@
         "drupal/jquery_ui_sortable": "^1.1",
         "drupal/jsonapi_extras": "^3.23",
         "drupal/layout_paragraphs": "^2.0",
-        "drupal/limited_field_widgets": "^2.1@alpha",
+        "drupal/limited_field_widgets": "^2.0",
         "drupal/link_class": "^2.1",
-        "drupal/linkit": "^6.0@RC",
+        "drupal/linkit": "^6.0@beta",
         "drupal/login_emailusername": "^2.1",
         "drupal/markup": "^2.0@beta",
         "drupal/media_entity_browser": "^2.0@alpha",
-        "drupal/media_responsive_thumbnail": "^1.5",
+        "drupal/media_responsive_thumbnail": "^1.4",
         "drupal/media_video_micromodal": "^1.0.8",
-        "drupal/memcache": "^2.0@alpha",
-        "drupal/menu_link_attributes": "^1.0",
+        "drupal/memcache": "^2.5",
+        "drupal/menu_link_attributes": "^1.3",
         "drupal/menu_trail_by_path": "^2.0",
         "drupal/metatag": "^1.22",
-        "drupal/metatag_async_widget": "^1.0@alpha",
+        "drupal/metatag_async_widget": "^1.1",
         "drupal/migrate_plus": "^6.0",
         "drupal/migrate_tools": "^6.0",
         "drupal/module_filter": "^4.0",
-        "drupal/modules_weight": "^1.9",
         "drupal/node_view_permissions": "^1.6",
-        "drupal/paragraphs": "^1.x-dev",
-        "drupal/paragraphs_ee": "1.x-dev@dev",
+        "drupal/paragraphs": "^1.15",
+        "drupal/paragraphs_ee": "^2.1@alpha",
         "drupal/password_policy": "^4.0",
-        "drupal/path_redirect_import": "1.x-dev",
+        "drupal/path_redirect_import": "^2.0",
         "drupal/pathauto": "^1.11",
         "drupal/pdfpreview": "^1.1",
         "drupal/permissions_filter": "^1.3",
@@ -150,25 +148,25 @@
         "drupal/purge_purger_http": "^1.1",
         "drupal/quick_node_clone": "^1.16",
         "drupal/rabbit_hole": "^1.0@beta",
-        "drupal/recaptcha": "^3.0",
+        "drupal/recaptcha": "^3.2",
         "drupal/redirect": "^1.8",
         "drupal/responsive_background_image": "^2.0@beta",
-        "drupal/robotstxt": "^1.3",
-        "drupal/schema_metatag": "^2.1",
+        "drupal/robotstxt": "^1.5",
+        "drupal/schema_metatag": "^2.4",
         "drupal/search_api": "^1.28",
         "drupal/search_api_solr": "4.2.8",
         "drupal/select_or_other": "^4.1",
         "drupal/selective_better_exposed_filters": "^3.0@beta",
         "drupal/sfweb2lead_webform": "^5.2",
-        "drupal/shield": "^1.6",
+        "drupal/shield": "^1.7",
         "drupal/simple_multistep": "^2.0",
         "drupal/simple_sitemap": "^4.1",
         "drupal/sitemap": "^2.0@beta",
-        "drupal/smart_trim": "^2.0.0",
+        "drupal/smart_trim": "^2.0",
         "drupal/stage_file_proxy": "^2.0",
         "drupal/structure_sync": "^2.0",
         "drupal/svg_image": "^3.0",
-        "drupal/swiftmailer": "2.x-dev",
+        "drupal/swiftmailer": "^2.4",
         "drupal/tamper": "^1.0@alpha",
         "drupal/taxonomy_access_fix": "^4.0@beta",
         "drupal/telephone_formatter": "^1.2",
@@ -179,8 +177,8 @@
         "drupal/twig_tweak": "^3.2",
         "drupal/ultimate_cron": "^2.0@alpha",
         "drupal/upgrade_status": "^4.0",
-        "drupal/video_embed_field": "^2.0",
-        "drupal/views_data_export": "^1.2",
+        "drupal/video_embed_field": "^2.5",
+        "drupal/views_data_export": "^1.3",
         "drupal/views_taxonomy_term_name_into_id": "^1.0@RC",
         "drupal/views_tree": "^2.0@RC",
         "drupal/viewsreference": "^2.0@beta",
@@ -345,7 +343,8 @@
                 "https://www.drupal.org/node/3023212": "https://www.drupal.org/files/issues/2018-12-31/missing_schema_field_formatter.patch"
             },
             "drupal/theme_filter": {
-                "https://www.drupal.org/project/theme_filter/issues/3272812": "https://www.drupal.org/files/issues/2022-03-31/theme_filter-3272812.patch"
+                "https://www.drupal.org/project/theme_filter/issues/3272812": "https://www.drupal.org/files/issues/2022-03-31/theme_filter-3272812.patch",
+                "D10 compatibility": "https://www.drupal.org/files/issues/2023-07-06/theme_filter-3299308-13.patch"
             },
             "drupal/viewsreference": {
                 "https://www.drupal.org/node/3192468": "https://www.drupal.org/files/issues/2021-01-12/3192468-2.patch"
@@ -364,9 +363,12 @@
             },
             "drupal/content_sync": {
                 "https://www.drupal.org/project/content_sync/issues/3270665": "https://www.drupal.org/files/issues/2022-04-21/3270665_php8_compatibility.patch",
+                "D10 compatibility": "https://www.drupal.org/files/issues/2023-06-22/content_sync-3330173-18-drupal10-compatibility.patch",
                 "https://www.drupal.org/project/content_sync/issues/3117708": "https://www.drupal.org/files/issues/2021-07-22/3117708-6_entity_type_error.patch"
             },
             "drupal/we_megamenu": {
+                "D10 compatibility": "https://www.drupal.org/files/issues/2023-03-16/we_megamenu-fix-drupal-10.patch",
+                "D10 deprecations fix": "https://www.drupal.org/files/issues/2023-03-16/we_megamenu-fix-php8-deprecations.patch",
                 "https://www.drupal.org/project/we_megamenu/issues/3226361": "https://www.drupal.org/files/issues/2022-05-30/3226361_10.patch"
             },
             "drupal/fixed_block_content": {
@@ -375,7 +377,20 @@
             "drupal/conditional_fields": {
                 "Remove validation for hidden fields": "https://www.drupal.org/files/issues/2023-05-05/3344587-required_fields_not_visible-15.patch",
                 "Conditional field is not working for paragraph": "https://www.drupal.org/files/issues/2023-06-15/conditional-fields-controlled-fields-inside-paragraphs-2902164-134.patch"
+            },
+            "drupal/config_export_ignore": {
+                "D10 compatibility": "https://www.drupal.org/files/issues/2022-07-18/config_export_ignore.1.1.rector.patch"
+            },
+            "drupal/edit_uuid": {
+                "D10 compatibility": "https://www.drupal.org/files/issues/2022-06-15/edit_uuid.2.x-dev.rector.patch"
+            },
+            "drupal/jquery_ui_sortable": {
+                "D10 compatibility": "https://www.drupal.org/files/issues/2022-06-16/jquery_ui_sortable.1.x-dev.rector.patch"
+            },
+            "drupal/viewsreference_filter": {
+                "D10 compatibility": "https://www.drupal.org/files/issues/2022-07-23/viewsreference_filter.1.x-dev.rector.patch"
             }
+
 
         },
         "patchLevel": {
