APEX-564: Field changes

--- a/config/apex-tools/default/field.field.paragraph.other.field_torx.yml
+++ b/config/apex-tools/default/field.field.paragraph.other.field_torx.yml
@@ -10,7 +10,7 @@ field_name: field_torx
 entity_type: paragraph
 bundle: other
 label: Other
-description: ''
+description: '<small><a href="/themes/custom/apex_tools/other-point-geometry.jpg" style="color:#e05206;" target="_blank">View Point Geometry</a></small>'
 required: false
 translatable: true
 default_value:
