--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "drupal/acquia_connector": "^4.0",
         "drupal/acquia_purge": "^1.3",
         "drupal/acquia_search": "^3.0.9",
-        "drupal/address": "^2.0@beta",
+        "drupal/address": "^1.12",
         "drupal/admin_toolbar": "^3.4",
         "drupal/advagg": "^6.0@alpha",
         "drupal/allowed_formats": "^2.0",
@@ -343,8 +343,7 @@
                 "https://www.drupal.org/node/3023212": "https://www.drupal.org/files/issues/2018-12-31/missing_schema_field_formatter.patch"
             },
             "drupal/theme_filter": {
-                "https://www.drupal.org/project/theme_filter/issues/3272812": "https://www.drupal.org/files/issues/2022-03-31/theme_filter-3272812.patch",
-                "D10 compatibility": "https://www.drupal.org/files/issues/2023-07-06/theme_filter-3299308-13.patch"
+                "https://www.drupal.org/project/theme_filter/issues/3272812": "https://www.drupal.org/files/issues/2022-03-31/theme_filter-3272812.patch"
             },
             "drupal/viewsreference": {
                 "https://www.drupal.org/node/3192468": "https://www.drupal.org/files/issues/2021-01-12/3192468-2.patch"
@@ -363,7 +362,6 @@
             },
             "drupal/content_sync": {
                 "https://www.drupal.org/project/content_sync/issues/3270665": "https://www.drupal.org/files/issues/2022-04-21/3270665_php8_compatibility.patch",
-                "D10 compatibility": "https://www.drupal.org/files/issues/2023-06-22/content_sync-3330173-18-drupal10-compatibility.patch",
                 "https://www.drupal.org/project/content_sync/issues/3117708": "https://www.drupal.org/files/issues/2021-07-22/3117708-6_entity_type_error.patch"
             },
             "drupal/we_megamenu": {
