feature/APEX-690: updated patches

--- a/composer.json
+++ b/composer.json
@@ -333,6 +333,12 @@
             "drupal/field_group_settings": {
                 "https://www.drupal.org/project/field_group_settings/issues/3302961": "https://www.drupal.org/files/issues/2022-08-10/3302961_1_button-fix.diff"
             },
+             "drupal/field_states_ui": {
+                "https://www.drupal.org/node/3212229": "https://www.drupal.org/files/issues/2023-07-11/3212229-05.patch"
+            },
+            "drupal/migrate_plus": {
+                "https://www.drupal.org/project/migrate_plus/issues/2787157": "https://www.drupal.org/files/issues/2023-07-11/fix_xpath_error-2787157-18.patch"
+            },
             "drupal/simple_gmap": {
                 "https://www.drupal.org/node/2863979": "https://www.drupal.org/files/issues/2018-11-21/simple_gmap-address-formatter-2863979-36.patch"
             },
